plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'event.to.ai'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
	maven { url 'https://jitpack.io' }
}

configurations {
	mockitoAgent
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'         // JPA + Hibernate
	implementation 'org.springframework.boot:spring-boot-starter-validation'       // Bean Validation
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.7'
	implementation 'tw.teddysoft.ucontract:uContract:2.0.0'                        // uContract
	runtimeOnly 'com.mysql:mysql-connector-j'                                      // MySQL driver
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.7'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.7'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'tw.teddysoft.ezspec:ezspec-core:2.0.3'
	testRuntimeOnly 'com.h2database:h2'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	mockitoAgent('org.mockito:mockito-core') {
		transitive = false
	}
}

tasks.named('test') {
	useJUnitPlatform()
	jvmArgs("-javaagent:${configurations.mockitoAgent.singleFile}")
}
